# gosek

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
gosek/: cli.py  patterns_loader.py  scanner.py
patterns/: patterns.json
tests/: test_scanner.py  test_smoke.py
