[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gosek"
version = "0.4.0"
authors = [{ name = "kankburhan" }]
description = "Fast concurrent secret hunter (regex loaded from external templates repo)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["secrets", "regex", "security", "cli"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Security",
]

dependencies = [
  "requests>=2.31",
  "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0.1"]
toml = ["tomli>=2.0.1; python_version < '3.11'", "tomllib; python_version >= '3.11'"]

[project.scripts]
gosek = "gosek.cli:main"
